<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResFrag">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/res_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_frag_title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/res_linLay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/res_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/res_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_frag_date_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/res_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/res_linLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/res_linLay1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/res_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_frag_time_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/res_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/res_linLay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/res_linLay2"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/res_lux_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_frag_lux_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/res_lux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/res_linLay4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/res_linLay3"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/res_loc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_frag_loc_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/res_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>